--- a/index.html
+++ b/index.html
@@ -1,7 +1,69 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Gaige J</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    </head>
+    <body>
+        <!-- top navbar -->
+        <nav class="navbar navbar-expand-lg bg-light fixed-top" id="topOfPage">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#topOfPage">Gaige</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" href="#webAnchor">Web</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#programmingAnchor">Programming</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#dbAnchor">Databases</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#aiAnchor">AI & ML</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#aboutAnchor">About Me</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+        </nav> <!-- end of top navbar-->
+
+        <!-- main content-->
+        <div class="container-fluid">
+            <div id="webAnchor">
+
+            </div>
+
+            <div id="programmingAnchor">
+
+            </div>
+
+            <div id="dbAnchor">
+
+            </div>
+
+            <div id="aiAnchor">
+
+            </div>
+
+            <div id="aboutAnchor">
+
+            </div>
+        </div> <!-- end of main content-->
+
+        <footer class="container-fluid text-center">
+            <hr/>
+            &copy; 2023 &bull; Gaige Johnston
+        </footer>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
+    </body>
 </html>
