--- a/index.html
+++ b/index.html
@@ -38,24 +38,88 @@
 
         <!-- main content-->
         <div class="container-fluid">
-            <div id="webAnchor">
-
+            <div class="card mb-3" id="webAnchor">
+              <div class="row g-0">
+                <div class="col-md-4">
+                  <img src="..." class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Web Developement</h5>
+                    <p>2 years experience:</p>
+                    <ul>
+                      <li>HTML</li>
+                      <li>CSS</li>
+                      <li>JavaScript</li>
+                    </ul>
+                    <p>1 year or less:</p>
+                    <ul>
+                      <li>Asp.NET</li>
+                      <li>Ajax</li>
+                      <li>PHP</li>
+                      <li>React</li>
+                      <li>Expo</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
             </div>
 
-            <div id="programmingAnchor">
-
+            <div class="card mb-3" id="programmingAnchor">
+              <div class="row g-0">
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Programming</h5>
+                    <p>1 year of experience using Java and Python</p>
+                    <p>Experience with:</p>
+                    <ul>
+                      <li>Object Oriented Design</li>
+                      <li>Generics</li>
+                      <li>Lists and Linked Lists</li>
+                      <li>Hashing</li>
+                      <li>Stacks and Queues</li>
+                      <li>Recursion</li>
+                      <li>Binary Trees</li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <img src="..." class="img-fluid rounded-end" alt="...">
+                </div>
+              </div>
             </div>
 
-            <div id="dbAnchor">
-
+            <div class="card mb-3" id="dbAnchor">
+              <div class="row g-0">
+                <div class="col-md-4">
+                  <img src="..." class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Database</h5>
+                    <p>placeholder</p>
+                  </div>
+                </div>
+              </div>
             </div>
 
-            <div id="aiAnchor">
-
+            <div class="card mb-3" id="aiAnchor">
+              <div class="row g-0">
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">AI and Machine Learning</h5>
+                    <p class="card-text">placeholder</p>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <img src="..." class="img-fluid rounded-end" alt="...">
+                </div>
+              </div>
             </div>
 
-            <div id="aboutAnchor">
-
+            <div class="container-fluid text-center" id="aboutAnchor">
+              <h3>About Me</h3>
+              <p>This site is still a work in progress</p>
             </div>
         </div> <!-- end of main content-->
 
