--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Gaige J</title>
+        <link href="css/gj.css" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     </head>
     <body>
         <!-- top navbar -->
-        <nav class="navbar navbar-expand-lg bg-light fixed-top">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#webAnchor">Gaige</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <!-- source: https://getbootstrap.com/docs/5.2/components/navbar/#containers -->
+        <nav class="navbar navbar-expand-lg bg-light fixed-top my-2 w-75 mx-auto border border-secondary rounded-5" id="myNav">
+            <div class="container-fluid ms-4">
+              <a class="navbar-brand" id="backToTop">Gaige J</a>
+              <button class="navbar-toggler me-3" id="mobileExpand" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
@@ -28,115 +30,144 @@
                   <li class="nav-item">
                     <a class="nav-link" href="#aiAnchor">AI & ML</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#aboutAnchor">About Me</a>
-                  </li>
                 </ul>
               </div>
             </div>
         </nav> <!-- end of top navbar-->
 
         
+        <!-- about me -->
+        <div class="container-fluid text-center row" id="about">
+            <div class="container w-75">
+                <h3>About Me</h3>
+                <p>
+                    I am a recent honours graduate of the 2 year Computer Systems Technician - Software Support course of Mohawk College in Ontario.
+                </p>
+                <p>
+                    I have developed strong interpersonal skills while working with Meridian Credit Union by assisting Members with their financial 
+                    needs and problems, and understanding when another co-worker would be better able to assist with a given request. If a problem 
+                    occured that took over one week to resolve, I would reach out to the Member to update them on the status of the issue - whether 
+                    there was progress or not - to keep the Member informed and ensure them they have not been forgotten about.
+                </p>
+                <p>
+                    Working with Toyota, I learned to always be brainstorming improvements to systems I am working with - to increase efficiency, 
+                    ease of use, and reduce wasted time and resources. I gained more initiative because of the constant encouragment to be making 
+                    these improvements, and eventually took on a temporary leadership position when shortstaffed during the start of Covid.
+                </p>
+            </div>
+        </div> <!-- end of about me -->
+
+        <!-- waves source: https://gist.github.com/arthurota/6c488ad8f82bdb8b58b60bbfc7ded54a -->
+        <div>
+        <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
+            <defs>
+              <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
+            </defs>
+            <g class="parallax">
+              <use xlink:href="#gentle-wave" x="48" y="8" fill="rgba(123, 255, 233,0.7)" />
+              <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(123, 255, 233,0.5)" />
+              <use xlink:href="#gentle-wave" x="48" y="6" fill="rgba(123, 255, 233,0.4)" />
+              <use xlink:href="#gentle-wave" x="48" y="1" fill="rgba(123, 255, 233,0.2)" />
+            </g>
+          </svg>
+        </div> <!-- end of waves -->
+
+
         <!-- main content-->
-        <div class="container-fluid">
-            <!-- website based knowledge -->
-            <div class="card mb-3" id="webAnchor">
-              <div class="row g-0">
-                <div class="col-md-4">
-                  <img src="..." class="img-fluid rounded-start" alt="...">
-                </div>
-                <div class="col-md-8">
-                  <div class="card-body">
-                    <h5 class="card-title">Web Developement</h5>
-                    <p>2 years experience:</p>
-                    <ul>
-                      <li>HTML</li>
-                      <li>CSS</li>
-                      <li>JavaScript</li>
-                    </ul>
-                    <p>1 year or less:</p>
-                    <ul>
-                      <li>Asp.NET</li>
-                      <li>Ajax</li>
-                      <li>PHP</li>
-                      <li>React</li>
-                      <li>Expo</li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div> <!-- end of website knowledge-->
+        <div class="container">
+            <div class="d-flex row">
+                <!-- website based knowledge -->
+                <div class="card border-light m-3 col p-0" id="webAnchor">
+                    <div class="row g-0">
+                        <div class="col-md-5 d-flex align-items-center">
+                            <img src="images/webhtml.png" class="image-fluid rounded-start" alt="html" style="max-width: 100%;">
+                        </div>
+                        <div class="col-md-7">
+                            <div class="card-body">
+                                <h5 class="card-title">Web Developement</h5>
+                                <p class="card-text">2 years experience using HTML, CSS, and JavaScript</p>
+                                
+                                <p class="card-text">1 year or less:</p>
+                                <ul class="card-text">
+                                    <li>Asp.NET</li>
+                                    <li>Ajax</li>
+                                    <li>PHP</li>
+                                    <li>React</li>
+                                    <li>Expo</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div> <!-- end of website knowledge-->
 
-            <!-- programming knowledge -->
-            <div class="card mb-3" id="programmingAnchor">
-              <div class="row g-0">
-                <div class="col-md-8">
-                  <div class="card-body">
-                    <h5 class="card-title">Programming</h5>
-                    <p>1 year of experience using Java and Python</p>
-                    <p>Experience with:</p>
-                    <ul>
-                      <li>Object Oriented Design</li>
-                      <li>Generics</li>
-                      <li>Lists and Linked Lists</li>
-                      <li>Hashing</li>
-                      <li>Stacks and Queues</li>
-                      <li>Recursion</li>
-                      <li>Binary Trees</li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="col-md-4">
-                  <img src="..." class="img-fluid rounded-end" alt="...">
-                </div>
-              </div>
-            </div> <!-- end of programming knowledge -->
+                <!-- programming knowledge -->
+                <div class="card border-light m-3 col p-0" id="programmingAnchor">
+                    <div class="row g-0">
+                        <div class="col-md-7">
+                            <div class="card-body">
+                                <h5 class="card-title">Programming</h5>
+                                <p class="card-text">1 year of experience using Java and Python</p>
+                                <p class="card-text">Experience with:</p>
+                                <ul class="card-text">
+                                    <li>Object Oriented Design</li>
+                                    <li>Generics</li>
+                                    <li>Lists and Linked Lists</li>
+                                    <li>Hashing</li>
+                                    <li>Stacks and Queues</li>
+                                    <li>Recursion</li>
+                                    <li>Binary Trees</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-md-5 d-flex align-items-center">
+                            <!-- image source: https://i.pinimg.com/564x/79/5e/bb/795ebb5f4a470cd7242136237f61fc53.jpg -->
+                            <img src="images/javaLogo.jpg" class="img-fluid rounded-end" alt="Java Logo" style="max-width: 100%;">
+                        </div>
+                    </div>
+                </div> <!-- end of programming knowledge -->
+            </div>
 
-            <!-- database knowledge -->
-            <div class="card mb-3" id="dbAnchor">
-              <div class="row g-0">
-                <div class="col-md-4">
-                  <img src="..." class="img-fluid rounded-start" alt="...">
-                </div>
-                <div class="col-md-8">
-                  <div class="card-body">
-                    <h5 class="card-title">Database</h5>
-                    <p class="card-text">
-                      About 1 year of experience writing SQL, planning out and working with Database Systems using MSSQL, as well as 
-                      interacting with a database from a web page.
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div> <!-- end of database knowledge -->
+            <div class="d-flex row">
+                <!-- database knowledge -->
+                <div class="card border-light m-3 col p-0" id="dbAnchor">
+                    <div class="row g-0">
+                        <div class="col-md-5 d-flex align-items-center">
+                            <img src="images/cloud.png" class="img-fluid rounded-start" alt="Flat blue cloud" style="max-width: 100%;">
+                        </div>
+                        <div class="col-md-7">
+                            <div class="card-body">
+                                <h5 class="card-title">Database</h5>
+                                <p class="card-text">
+                                    About 1 year of experience writing SQL, planning out and working with Database Systems using MSSQL, as well as 
+                                    interacting with a database from a web page.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div> <!-- end of database knowledge -->
 
-            <!-- ai knowledge -->
-            <div class="card mb-3" id="aiAnchor">
-              <div class="row g-0">
-                <div class="col-md-8">
-                  <div class="card-body">
-                    <h5 class="card-title">AI and Machine Learning</h5>
-                    <p class="card-text">
-                      Created a Discord chat bot to reply to themed questions. If the bot could not answer, it would send the user prompt off to 
-                      ChatGPT (to the davinci-003 engine) and output ChatGPT's response to the user in Discord.
-                    </p>
-                    <p class="card-text">
-                      Limited experience with MLPClassifier, Vectorizers, Lemmas, Regex and Fuzzy Regex. As well as Breadth-first, Depth-first, and
-                      A* search algorithms
-                    </p>
-                  </div>
-                </div>
-                <div class="col-md-4">
-                  <img src="..." class="img-fluid rounded-end" alt="...">
-                </div>
-              </div>
-            </div> <!-- end of ai knowledge -->
-
-            <!-- about me -->
-            <div class="container-fluid text-center" id="aboutAnchor">
-              <h3 class="card-title">About Me</h3>
-              <p>This site is still a work in progress</p>
-            </div> <!-- end of about me -->
+                <!-- ai knowledge -->
+                <div class="card border-light m-3 col p-0" id="aiAnchor">
+                    <div class="row g-0">
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">AI and Machine Learning</h5>
+                                <p class="card-text">
+                                    Created a Discord chat bot to reply to themed questions. If the bot could not answer, it would send the user prompt off to 
+                                    ChatGPT (to the davinci-003 engine) and output ChatGPT's response to the user in Discord.
+                                </p>
+                                <p class="card-text">
+                                    Limited experience with MLPClassifier, Vectorizers, Lemmas, Regex and Fuzzy Regex. As well as Breadth-first, Depth-first, and
+                                    A* search algorithms
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-md-4 d-flex align-items-center">
+                            <img src="images/chat.png" class="img-fluid rounded-end" alt="Chat Bubble" style="max-width: 100%;">
+                        </div>
+                    </div>
+                </div> <!-- end of ai knowledge -->
+            </div>
         </div> <!-- end of main content -->
 
 
@@ -145,6 +176,26 @@
             &copy; 2023 &bull; Gaige Johnston
         </footer>
 
+
+        <script type="text/javascript">
+            document.getElementById("backToTop").addEventListener("click", () => {
+                                                                    // source: https://www.w3schools.com/howto/howto_js_scroll_to_top.asp
+                                                                    document.body.scrollTop = 0; // For Safari
+                                                                    document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
+                                                                    collapseNavbar();
+                                                                });
+
+            let navbar = document.getElementById("navbarNav");
+            navbar.addEventListener("click", () => collapseNavbar());
+
+            // if navbar is expanded and then a link inside is clicked on, it will collapse and go to the page section
+            function collapseNavbar() {
+                if (navbar.getAttribute("class") == "navbar-collapse collapse show") {
+                    navbar.removeAttribute("class")
+                    navbar.setAttribute("class", "navbar-collapse collapse")
+                }
+            }
+        </script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
     </body>
 </html>
