--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class="navbar navbar-expand-lg bg-light fixed-top my-2 w-75 mx-auto border border-secondary rounded-5" id="myNav">
             <div class="container-fluid ms-4">
               <a class="navbar-brand" id="backToTop">Gaige J</a>
-              <button class="navbar-toggler me-3" id="mobileExpand" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <button class="navbar-toggler" id="mobileExpand" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
